<resources>
    <string name="app_name">utils</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="acelerometro">Acelerometro</string>
    <string name="audio">Audio</string>
    <string name="camara">Camara</string>
    <string name="dictado">Dictado</string>
    <string name="gestos">Gestos</string>
    <string name="gps">GPS</string>
    <string name="lectura">Lectura</string>
    <string name="video">Video</string>
    <string name="play">Empezar</string>
    <string name="stop">Parar</string>
    <string name="pause">Pausar</string>
    <string name="mensajevideo">Haga Click arriba de este mensaje</string>
    <string name="imagen1">imagen</string>
    <string name="boton1">tomar foto</string>
    <string name="txtAltitud">Altitud </string>
    <string name="txtLatitud">Latitud </string>
    <string name="txtLongitud">Longitud </string>
    <string name="txtDireccion">Direccion </string>
    <string name="btnObtenerDatos">Obtener Datos Posicion </string>
    <string name="edt_tts">Diga algo</string>
    <string name="btn_tts1">Escuchar</string>
    <string name="btn_tts2">Guardar</string>
    <string name="btnTalk">Hable</string>
    <string name="textoAcelx">Ang X</string>
    <string name="textoAcely">Ang Y</string>
    <string name="textoAcelz">Ang Z</string>
    <string name="colorrojo">Valor rojo</string>
    <string name="colorverde">Valor verde</string>
    <string name="colorazul">valor azul</string>
    <string name="mensajegesto">gestos</string>
    <string name="hello">Aplicación que responde a gestos.</string>
    <string name="lista_opciones">Listado de gestos disponibles:</string>

    <string-array name="Opciones">
        <item>Toque simple: Pausar y reanudar reproducción</item>
        <item>Double toque: Ver momento en reproducción</item>
        <item>Toque largo: Ver duración del vídeo</item>
        <item>Swipe rápido a la izquierda: Reiniciar vídeo</item>
        <item>Swipe rápido a la derecha: Terminar vídeo</item>
        <!--<item>Scroll: Adelantar o atrasar el vídeo</item>-->
    </string-array>
</resources>